icon and display buttons

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <div class="caption-container">
         <div id ="connectionIndicator"></div>
         <div id="logo">
-            <img src="capstrlogo.jpg" alt="capstr logo" height="50vh" style="filter: none;">
+            <img src="capstricon.png" alt="capstr logo" height="50vh" style="filter: none;">
         </div>
         <div class="d1">
             <h2 id="h2">Welcome to The Clarice!</h2> <!-- Introduction message -->
@@ -28,7 +28,7 @@
     <!-- Icons container for user interaction -->
     <div class="icon-container">
         <!-- Color theme switch icon -->
-        <div class="icon" id="colorIcon" style="display:none;">
+        <div class="icon" id="colorIcon">
             <img src="icons/color switch.svg" alt="Help Icon" width="100%" height="100%" style="filter: none;">
         </div>
         <!-- Font size decrease icon -->
@@ -40,7 +40,7 @@
             <img src="icons/typeface.svg" alt="Settings Icon" width="100%" height="100%" style="filter: none;">
         </div>
                 <!-- Dyslexic friendly font icon-->
-                <div class="icon" id="langIcon" style="display:none;">
+                <div class="icon" id="langIcon">
                     <img src="icons/translate.svg" alt="Settings Icon" width="100%" height="100%" style="filter: none;">
                 </div>
 
