fonts + prelim setup sync

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <title>NOI LiveGuide</title> <!-- Page title -->
+    <title>Capstr</title> <!-- Page title -->
 </head>
 
 <body>
@@ -14,7 +14,7 @@
     <div class="caption-container">
         <div id ="connectionIndicator"></div>
         <div id="logo">
-            <img src="capstricon.png" alt="capstr logo" height="50vh" style="filter: none;">
+            <img src="icons/capstrlogo.jpg" alt="capstr logo" height="50vh" style="filter: none;">
         </div>
         <div class="d1">
             <h2 id="h2">Welcome to The Clarice!</h2> <!-- Introduction message -->
@@ -62,7 +62,7 @@
     <div class="popup-content">
         <span class="close">&times;</span>
         <div>
-        <h3><font color="yellow">Welcome to the Innovation Studio's NOI+ Festival Live Guide!</font></h3> 
+        <h3><font color="yellow">Welcome to Capstr!</font></h3> 
         <p><b>Please respect your fellow audience members by:</b></p>
         <p>✅ Putting your phone on silent and/or Do Not Disturb mode</p>
         <p>🚫 Refraining from checking texts/emails/social media or making calls</p>
