added copyright & license disclaimers

--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,24 @@
+<!--
+  Copyright (c) 2024 Timothy Kelly and Peter Leibold
+
+  This project is licensed under the Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) License with additional terms.
+
+  You are free to:
+  - Share — copy and redistribute the material in any medium or format
+  - Adapt — remix, transform, and build upon the material
+
+  Under the following terms:
+  - Attribution — You must give appropriate credit, provide a link to the license, and indicate if changes were made. You may do so in any reasonable manner, but not in any way that suggests the licensor endorses you or your use.
+  - NonCommercial — You may not use the material for commercial purposes. Commercial purposes do not include use in commercial performances.
+
+  Additional terms:
+  - The material may be used in commercial performances, provided that the performance itself is not a software product sold for profit.
+  - The material may not be included as part of any paid-for software package or any other software product that is sold for profit.
+
+  To view a copy of this license, visit http://creativecommons.org/licenses/by-nc/4.0/ or send a letter to Creative Commons, PO Box 1866, Mountain View, CA 94042, USA.
+-->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
